[build-system]
requires = [
    "setuptools",
    "matplotlib",
    "numpy"
]
build-backend = "setuptools.build_meta"

[project]
name = "bidimensional"
version = "1.9.1"
description = "A collection of 2D utilities for coordinate representation and manipulation."
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.7.13"
authors = [
    {name = "Paulo Sanchez", email = "dev.szblzpaulo@gmail.com"}
]
maintainers = [
    {name = "Paulo Sanchez", email = "dev.szblzpaulo@gmail.com"}
]
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent"
]

[project.urls]
"Homepage" = "https://github.com/erlete/bidimensional"
"Bug Tracker" = "https://github.com/erlete/bidimensional/issues"
